--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
             usevisualizer: "real",
             visualizertype: "2",
             itunestoken: "1000lIPN",
-            metadatatechnic: "fallback", //fallback (usar para zeno)
+            metadatatechnic: "", //fallback (usar para zeno)
             corsproxy: "",
             usestreamcorsproxy: "false",
-            streamurl: "https://stream-151.zeno.fm/y5efqemdwhruv?zs=VB4AZhOyQEOxGZnFmwm3GA",
-            streamtype: "zeno", //soporta: zeno, icecast2, shoutcast2
-            idzeno: "y5efqemdwhruv",
+            streamurl: "https://serverparadize.com:8080",
+            streamtype: "shoutcast2", //soporta: zeno, icecast2, shoutcast2
+            idzeno: "",
             icecastmountpoint: "",
             shoutcastpath: "/stream",
             shoutcastid: "1",
