--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             metadatatechnic: "", //fallback (usar para zeno)
             corsproxy: "",
             usestreamcorsproxy: "false",
-            streamurl: "https://serverparadize.com:8080",
+            streamurl: "https://serverparadize.com/8020/;",
             streamtype: "shoutcast2", //soporta: zeno, icecast2, shoutcast2
             idzeno: "",
             icecastmountpoint: "",
