--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="theme-color" content="#f4000b">
-    <title>RADIO EXOTICA FM</title>
+    <title>Radio Mariela Fm</title>
 
     <link href="css/style.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
             fontname: "Saira Condensed",
             googlefont: "Saira+Condensed:wght@100",
             fontratio: "0.4",
-            radioname: "RADIO EXOTICA FM",
+            radioname: "Radio Mariela Fm",
             scroll: "true",
             coverimage: "img/cover.jpg",
             onlycoverimage: "false",
@@ -88,7 +88,7 @@
 
     <footer style="display:grid;align-content:end">
         <div style="background-color:#222;color:#fff;text-align:center;padding:10px">
-            &copy; Copyright 2024 - <a href=" ">J.Cesar</a>
+            &copy; Copyright 2024 - <a href="https://whatsapp://send?text=&phone=51992377712">J.Cesar</a>
         </div>
     </footer>
 
