--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Mariela FM 104.1">
         <meta property="og:url" content="https://mariellafm.blogspot.com">
-        <meta property="og:title" content="Radio Cielo 1010 AM">
-        <meta property="og:description" content="Radio Cielo 1010 AM - Transmite desde Lima - Peru © Copyright 2024 - Mariela FM 104.1 Lima - Peru CABINA TELF: +51 945 949 802">
+        <meta property="og:title" content="Mariela FM 104.1">
+        <meta property="og:description" content="Mariela FM 104.1 - Transmite desde Peru © Copyright 2024 - Mariela FM 104.1 - CABINA TELF: +51 945 949 802">
         <meta property="og:image" content="img/logo.png">
         <meta property="og:image:type" content="logo.png">
         <meta property="og:image:width" content="600">
@@ -64,7 +64,7 @@
     <script src="app.js" defer=""></script>
     <link rel="icon" href="img/logo.png">
     <link rel="manifest" href="manifest.json" data-pwa-version="set_in_manifest_and_pwa_js">
-    <title>Radio Cielo 1010 AM</title>
+    <title>Mariela FM 104.1</title>
 <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400"><link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Unica+One&amp;display=swap"><style type="text/css">@keyframes playerpulse { 	0% { 	  fill: rgba(255, 255, 255, 1.0);	} 	50% { 	  fill: rgba(255, 246, 0, 1.0); 	} 	100% { 		fill: rgba(255, 255, 255, 1.0); 	} }</style></head>
 
 <body>
