--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         }
     </script>
     <footer style="display:grid;align-content:end">
-        <div style="background-color:#222;color:#fff;text-align:center;padding:10px">© Copyright 2024 - Mariela FM 104.1 Lima - Peru CABINA TELF: +51 945 949 802</a>
+        <div style="background-color:#222;color:#fff;text-align:center;padding:10px">© Copyright 2024 - Mariela FM 104.1 - Peru CABINA TELF: +51 945 949 802</a>
         </div>
         <script>
             $(".mobile-nav-toggle").click(function () {
