--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 	fontname: "Unica One",
 	googlefont: "Unica+One&display=swap",
 	fontratio: "0.6",
-	radioname: "SONANDO AHORA",
+	radioname: "Mariela Fm",
 	scroll: "true",
 	coverimage: "img/logo.png",
 	onlycoverimage: "false",
