--- a/index.html
+++ b/index.html
@@ -135,19 +135,16 @@
 	usevisualizer: "real",
 	visualizertype: "6",
 	itunestoken: "1000lIPN",
-	metadatatechnic: "",
-	ownmetadataurl: "",
-	streamurl: "https://stream-153.zeno.fm/pk9nmfdfvbytv?zs=RXZ3DsN3SsWFZKjHanTQrwams",
-	streamtype: "shoutcast2",
-	icecastmountpoint: "",
-	radionomyid: "",
-	radionomyapikey: "",
-	radiojarid: "",
-	radiocoid: "",
-	shoutcastpath: "/live",
-	shoutcastid: "1",
-	streamsuffix: "",
-	metadatainterval: "10000",
+         metadatatechnic: "creativo-agencia-metadato", //fallback (usar para zeno)
+         corsproxy: "",
+         usestreamcorsproxy: "false",
+         streamurl: "https://stream-176.zeno.fm/pk9nmfdfvbytv?zt=",
+         streamtype: "zeno", //soporta: zeno, icecast2, shoutcast2
+         idzeno: "pk9nmfdfvbytv",
+         icecastmountpoint: "/radio.mp3",
+         shoutcastpath: "/stream",
+         shoutcastid: "1",
+         metadatainterval: "26000",
 	volume: "100",
 	autoplay: "true",
 	debug: "false",
