--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 <nav class="nav-menu">
 <ul>
 <li><a target="_black" href="https://reproduc.github.io/MarielaApp/"><i class="bx bx-podcast"></i>
-<span>DescargaNuestra App</span></a></li>
+<span>Nuestra App</span></a></li>
 
 <li><a target="_black" href="https://mariellafm.blogspot.com"><i class="bx bx-podcast"></i>
 <span>NuestraWeb</span></a></li>
