--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
 <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-
+<link rel="manifest" href="manifest.json" data-pwa-version="set_in_manifest_and_pwa_js">
 <link href="assets/css/style486a.css?v=327" rel="stylesheet">
 <link href="assets/css/banner5c3d.html?v=795" rel="stylesheet">
 <link rel="stylesheet" href="assets/css/style-playlist376c.css?v=682">
