--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 <link href="assets/css/banner5c3d.html?v=795" rel="stylesheet">
 <link rel="stylesheet" href="assets/css/style-playlist376c.css?v=682">
 <style type="text/css">
+
+
+	    <!-- Link to the manifest file -->
+    <link rel="manifest" href="manifest.json">
           /* Estilos para el botón de instalación */
         #installButtonWrapper {
             position: relative; 
