--- a/index.html
+++ b/index.html
@@ -407,7 +407,14 @@
 
 </section>
 
-
+    <style>
+        html, body {
+            font-family: "Open Sans", sans-serif;
+            height: 100%;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            color: #000000;
         }
         #installPopup {
             display: none;
@@ -424,7 +431,7 @@
         }
         #installPopup button {
             
-            background: #4354b5;
+            background: #cc9b06;
             color: white;
             border: none;
             padding: 10px 20px;
