--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ userinterface: "big",
     color4: "#23005C",
 	itunestoken: "1000lIPN",
 	metadatatechnic: "creativo-agencia-metadato",
-	ownmetadataurl: "https://zenoplay.zenomedia.com/api/zenofm/nowplaying/pk9nmfdfvbytv",
+	ownmetadataurl: "",
 	streamurl: "https://stream-176.zeno.fm/pk9nmfdfvbytv",
 	streamtype: "radiozeno",
 	icecastmountpoint: "/radio.mp3",
