--- a/index.html
+++ b/index.html
@@ -440,11 +440,11 @@ userinterface: "big",
 	metadatatechnic: "creativo-agencia-metadato",
 	ownmetadataurl: "",
 	streamurl: "https://stream-176.zeno.fm/pk9nmfdfvbytv",
-	streamtype: "zeno",
+	streamtype: "radiozeno",
 	icecastmountpoint: "/radio.mp3",
 	radionomyid: "",
 	radionomyapikey: "",
-	zenoid: "pk9nmfdfvbytv",
+	radiozenoid: "pk9nmfdfvbytv",
 	radiojarid: "",
 	radiocoid: "",
 	shoutcastpath: "/live",
