--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&amp;display=swap" rel="stylesheet">
 
+    <!-- Link to the manifest file -->
+    <link rel="manifest" href="manifest.json">
+	
 <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
 <link href="boxicons.min.css" rel="stylesheet">
