--- a/index.html
+++ b/index.html
@@ -412,7 +412,22 @@
 
 </section>
 
-
+ <div id="main">
+	 <button class="openbtn" onClick="toggleNav()">
+                                    <img src="menu.png" alt="Menu" class="menu-icon">
+                                </button>                            
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td height="470" valign="top">
+              <div id="installButtonWrapper">
+                <img src="instalar.png" id="installButton" alt="Instalar App" />
+            </div> 
+                                        
 
 <script src="assets/js/lunaradio.js"></script>
 	
